Bug 236725 - Viewing encapsulated messages with attachment doesn't display text
Summary: Viewing encapsulated messages with attachment doesn't display text
Status: VERIFIED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-05-07 18:29 UTC by Thomas McGuire
Modified: 2010-05-10 23:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-05-07 18:29:42 UTC
1. Create a simple mail with attachment and save it as a draft
2. Forward the draft, save the result as draft again. The message should now 
   have the following structure:
multipart/mixed
  text/plain
  message/rfc822
    multipart/mixed
      text/plain
      application/pdf (or whatever)
3. In the viewer pane, click on "Encapsulated message", which causes a separate   
   window to open. 
   Result: The text of the original message is not displayed
Comment 1 András Manţia 2010-05-09 16:24:00 UTC
SVN commit 1124580 by amantia:

Fix naviating in the mime tree when an encapsulated message is shown (bug 236725). Thomas, for me viewing the message worked fine, just double clicking on the top node shown the empty message.

Fix message saving and viewing. Works only from the header links ATM (bug 236732).

BUG: 236725
CCBUG: 236732


 M  +1 -1      nodehelper.cpp  
 M  +5 -1      objecttreeparser.cpp  
 M  +5 -1      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124580