Fix naviating in the mime tree when an encapsulated message is shown (bug 236725). Thomas, for me viewing the message worked fine, just double clicking on the top node shown the empty message.

Fix message saving and viewing. Works only from the header links ATM (bug 236732).

BUG: 236725
CCBUG: 236732

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1124580